tests/should-fail/semantics/code-literal-cant-take-argument.j

function foo takes integer i returns nothing
endfunction

function bar takes nothing returns code
    return function foo
endfunction
